--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,7 @@ body {
   justify-content: center;
 }
 
+/* 
 .h1 {
   font-size: 3rem;
 }
@@ -115,8 +116,8 @@ body {
   border-top-width: 1px;
 }
 .width-fit {
-  width: -moz-fit-content; /* For Firefox */
-  width: fit-content; /* Standard syntax */
+  width: -moz-fit-content; 
+  width: fit-content; 
 }
 .width-full {
   width: 484px;
@@ -213,7 +214,9 @@ textarea {
   color: purple;
   font-size: large;
 }
-@media (width <= 610px) {
+
+/* Small devices (portrait tablets and large phones, 600px and up) 
+@media only screen and (min-width: 600px) and (max-width: 700px) {
   .h3 {
     font-size: 1.2rem;
     text-align: center;
@@ -267,6 +270,15 @@ textarea {
     display: flex;
     margin: 10px 0px;
   }
+  .mainContact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .mainContactdiv {
+    display: flex;
+    flex-direction: column;
+  }
   .icon {
     font-size: 1rem;
     text-align: center;
@@ -278,4 +290,6 @@ textarea {
     align-items: center;
     gap: 10px;
   }
-}
+} */
+/* Extra small devices (phones, 600px and down)
+  @media only screen and (max-width: 600px) {...} */
