--- a/style/home.css
+++ b/style/home.css
@@ -4,21 +4,186 @@
   color: #262626;
   text-decoration: none;
 }
-
 body {
   font-family: "Inter", sans-serif;
-  max-width: 1350px;
   padding-left: 25px;
   padding-right: 25px;
   margin: auto;
   line-height: 2rem;
+  
+  
+}
+/* Index Header */
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 30px;
+}
+header nav ul {
+  list-style: none;
+  display: flex;
+  margin: 10px;
+  gap: 10px;
+}
+.menu:not(:first-child):before {
+  content: "|";
+  padding-left: 20px;
+  padding-right: 20px;
+}
+/* Index Main */
+main {
+  padding-top: 100px;
+  padding-bottom:100px;
   display: flex;
   flex-direction: column;
-  align-content: center;
+}
+main div:first-child{
+  display: flex;
   justify-content: center;
+  align-items: center;
+  margin: 30px; 
+}
+main div:first-child img {
+  width:284px ;
+  height: 284px;
+  border-radius: 50%;
+}
+main div:nth-child(2){
+  display: flex;
+  flex-direction: column;
+ text-align: center;
+}
+main div:nth-child(2) h2 {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+} 
+main div:nth-child(2) h3{
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+main div:nth-child(2) p{
+  font-size: 1rem;
+  text-align: justify;
+}
+main div:nth-child(2) div{
+  display: flex;
+  gap:20px;
+}
+main div:nth-child(2) div p a{
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  width: 100px;
+  min-height: 100px;
+  border: 1px solid black ;
+  border-radius: 50%;
+  align-items: center;
+  font-weight: bold;
+}
+.bg-yellow {
+  background-color: #eea302;
+}
+.bg-red {
+  background-color: #e13b25;
+}
+.bg-blue {
+  background-color: #80d8da;
+}
+/* Index Footer */
+footer {
+  border-top:1px solid #e0e0e0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 20px;
+  gap: 20px;
+}
+footer div h3 {
+  font-size: 1.2rem;
+  font-size: small;
+}
+footer div:first-child h3{
+  margin-top: 40px;
+}
+footer div p{
+  font-size: 1rem;
+}
+footer div:last-child{
+  font-size: small;
+}
+.icon {
+  font-size: 1rem;
+  text-align: center;
+}
+@media only screen and (min-width: 480px) and (max-width: 992px) {
+  main div:nth-child(2) p{
+    text-align:justify;
+    padding-left: 20px;
+    padding-right:20px;
+    font-size: 1rem;
+  }
+  main div:nth-child(2) div{
+    margin-top: 10px;
+    flex-direction: row;
+   justify-content: center;
+    
+  }
+}
+@media only screen and (min-width: 992px) {
+  header {
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 10px 30px 10px ;
+  }
+  main{
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 120px 0px 120px;
+  gap: 50px;
+  }
+  main div:first-child img {
+    width:484px ;
+    height: 484px;
+    border-radius: 50%;
+  }
+  main div:nth-child(2){
+   text-align: justify;
+ 
+  }
+  main div:nth-child(2) h2 {
+    padding-top: 11px;
+    padding-bottom: 11px;
+    
+  } 
+  main div:nth-child(2) h3{
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+  }
+  main div:nth-child(2) p{
+    font-size: 1rem;
+  }
+  .width-p {
+    width: 67%;
+  }
+  main div:nth-child(2) div{
+    flex-direction: row;
+    
+  }
+  footer{
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: justify;
+  }
+  
 }
 
-/* 
+/* These comments below are the css'style used by me for the desktop first
+
 .h1 {
   font-size: 3rem;
 }
@@ -74,14 +239,8 @@ body {
   gap: 40px;
 }
 
-.menu:not(:first-child):before {
-  content: "|";
-  padding-left: 16px;
-  padding-right: 16px;
-}
-.list-style-none {
-  list-style: none;
-}
+
+
 .margin-auto {
   margin: auto;
 }
@@ -123,23 +282,10 @@ body {
   width: 484px;
   height: 484px;
 }
-.rounded {
-  border-radius: 50%;
-}
 
-.bg-yellow {
-  background-color: #eea302;
-}
-.bg-red {
-  background-color: #e13b25;
-}
-.bg-blue {
-  background-color: #80d8da;
-}
-.button {
-  width: 100px;
-  min-height: 100px;
-}
+
+
+
 .mainIndex {
   display: flex;
   justify-content: center;
@@ -168,9 +314,7 @@ footer {
   justify-content: space-between;
   flex-direction: row;
 }
-.width-p {
-  width: 67%;
-}
+
 .notMQ {
   display: flex;
 }
@@ -215,7 +359,7 @@ textarea {
   font-size: large;
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) 
+ Small devices (portrait tablets and large phones, 600px and up) 
 @media only screen and (min-width: 600px) and (max-width: 700px) {
   .h3 {
     font-size: 1.2rem;
@@ -290,6 +434,6 @@ textarea {
     align-items: center;
     gap: 10px;
   }
-} */
-/* Extra small devices (phones, 600px and down)
-  @media only screen and (max-width: 600px) {...} */
+} 
+ Extra small devices (phones, 600px and down)
+  @media only screen and (max-width: 600px) {...}  */
