--- a/style/contact.css
+++ b/style/contact.css
@@ -1,3 +1,4 @@
+/* Contact Main */
 main {
   display: flex;
   flex-direction: column;
@@ -65,7 +66,6 @@ button {
     gap: 30px;
   }
 }
-
 @media only screen and (min-width: 1025px) and (max-width: 1724px) {
   main {
     flex-direction: row;
