--- a/style/root.css
+++ b/style/root.css
@@ -46,8 +46,8 @@ footer div h3 {
   font-size: 1.2rem;
   font-size: small;
 }
-footer div:first-child h3 {
-  margin-top: 40px;
+footer div h3 {
+  margin-top: 20px;
 }
 footer div p {
   font-size: 1rem;
@@ -68,5 +68,8 @@ footer div:last-child {
     flex-direction: row;
     justify-content: space-between;
     text-align: justify;
+  }
+  footer div h3 {
+    margin-top: 30px;
   }
 }
