--- a/style/root.css
+++ b/style/root.css
@@ -57,7 +57,7 @@ footer div:last-child {
 }
 .icon {
   font-size: 1rem;
-  text-align: center;
+  text-align: justify;
 }
 @media only screen and (min-width: 740px) and (max-width: 1730px) {
   header {
