isssues' resolution and projet's finalisation

--- a/style/contact.css
+++ b/style/contact.css
@@ -2,14 +2,11 @@
 main {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px 0px;
-  margin: auto;
-  text-align: center;
 }
 main .left-side {
   display: flex;
   flex-direction: column;
+  text-align: center;
   gap: 20px;
   margin: 30px 0px;
 }
@@ -19,24 +16,28 @@ main .rigth-side {
   margin: 20px 0px;
   gap: 20px;
 }
+
 input,
 textarea {
   border: 2px solid black;
-  font-size: 1rem;
-  padding-left: 5px;
-  padding-right: 5px;
 }
 input {
-  padding: 10px 10px;
+  padding: 8px 50px;
+  margin-bottom: 20px;
 }
 textarea {
   resize: none;
-  padding: 30px 10px;
+  padding: 40px 57px;
 }
-button {
-  margin: 20px 0px;
-  width: 120px;
-  height: 120px;
+.formBtn {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+.formBtn button {
+  margin: 10px 0px;
+  width: 160px;
+  height: 160px;
   border: 1px solid black;
   border-radius: 50%;
   font-size: 18px;
@@ -44,14 +45,28 @@ button {
   background-color: #eea302;
 }
 
-@media only screen and (min-width: 550px) and (max-width: 840px) {
+@media only screen and (min-width: 550px) and (max-width: 940px) {
+  main .left-side {
+    text-align: justify;
+  }
+  main .rigth-side {
+    margin: 20px 0px;
+    gap: 20px;
+  }
+
   .inputPart {
     display: flex;
     flex-direction: row;
-    gap: 60px;
+    gap: 50px;
+  }
+  input {
+    padding: 10px 85px;
+  }
+  textarea {
+    padding: 40px 90px;
   }
 }
-@media only screen and (min-width: 850px) and (max-width: 1024px) {
+@media only screen and (min-width: 950px) and (max-width: 1024px) {
   main {
     flex-direction: row;
     justify-content: center;
@@ -60,25 +75,57 @@ button {
     margin: 0px 30px;
     text-align: justify;
   }
+  main .left-side {
+    text-align: justify;
+    margin: 30px 10px;
+  }
+  main .rigth-side {
+    margin-left: 50px;
+    gap: 20px;
+  }
   .inputPart {
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    gap: 20px;
+  }
+  input {
+    padding: 10px 40px;
+    margin-bottom: 20px;
+  }
+  textarea {
+    resize: none;
+    padding: 40px 45px;
   }
 }
 @media only screen and (min-width: 1025px) and (max-width: 1724px) {
   main {
     flex-direction: row;
     justify-content: center;
-    flex: 1;
     gap: 300px;
     margin: 0px 30px;
+    padding: 40px 20px;
+  }
+  main .left-side {
+    align-items: flex-start;
     text-align: justify;
+    margin: 30px 30px;
+  }
+  main .rigth-side {
+    margin-left: 100px;
+    gap: 20px;
   }
 
   .inputPart {
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    gap: 80px;
+  }
+  input {
+    padding: 10px 45px;
+    margin-bottom: 20px;
+  }
+  textarea {
+    resize: none;
+    padding: 40px 45px;
   }
 }
