--- a/style/root.css
+++ b/style/root.css
@@ -3,6 +3,7 @@
   padding: 0;
   color: #262626;
   text-decoration: none;
+  box-sizing: border-box;
 }
 body {
   font-family: "Inter", sans-serif;
@@ -19,32 +20,31 @@ header {
   flex-direction: column;
   margin-top: 30px;
 }
+
 header nav ul {
   list-style: none;
   display: flex;
-  margin: 10px;
-  gap: 10px;
-}
-.menu:not(:first-child):before {
-  content: "|";
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-top: 30px;
 }
 
+.menu:not(:first-child):before {
+  content: "|";
+  padding-left: 16px;
+  padding-right: 16px;
+}
 /* Portfolio Footer */
 footer {
-  border-top: 1px solid #e0e0e0;
+  border-top: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 20px;
+  margin: 10px;
   gap: 20px;
 }
 footer div h3 {
-  font-size: 1.2rem;
-  font-size: small;
+  font-size: 1rem;
 }
 footer div h3 {
   margin-top: 20px;
@@ -57,9 +57,9 @@ footer div:last-child {
 }
 .icon {
   font-size: 1rem;
-  text-align: justify;
+  text-align: center;
 }
-@media only screen and (min-width: 740px) and (max-width: 1730px) {
+@media only screen and (min-width: 740px) and (max-width: 1009px) {
   header {
     justify-content: space-between;
     flex-direction: row;
@@ -71,5 +71,22 @@ footer div:last-child {
   }
   footer div h3 {
     margin-top: 30px;
+  }
+}
+@media only screen and (min-width: 1010px) and (max-width: 1730px) {
+  header {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+  footer {
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: justify;
+  }
+  footer div h3 {
+    margin-top: 30px;
+  }
+  .icon {
+    text-align: justify;
   }
 }
