--- a/style/root.css
+++ b/style/root.css
@@ -13,18 +13,19 @@ body {
 }
 
 /* Portfolio Header */
+
 header {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-top: 30px;
+  gap: 30px;
 }
 
 header nav ul {
   list-style: none;
   display: flex;
-  margin-top: 30px;
 }
 
 .menu:not(:first-child):before {
@@ -45,32 +46,22 @@ footer {
 }
 footer div h3 {
   font-size: 1rem;
-}
-footer div h3 {
   margin-top: 20px;
 }
+
 footer div p {
   font-size: 1rem;
 }
 footer div:last-child {
   font-size: small;
 }
-.icon {
+.icon a {
   font-size: 1rem;
-  text-align: center;
 }
 @media only screen and (min-width: 740px) and (max-width: 1009px) {
   header {
     justify-content: space-between;
     flex-direction: row;
-  }
-  footer {
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: justify;
-  }
-  footer div h3 {
-    margin-top: 30px;
   }
 }
 @media only screen and (min-width: 1010px) and (max-width: 1730px) {
@@ -81,12 +72,19 @@ footer div:last-child {
   footer {
     flex-direction: row;
     justify-content: space-between;
-    text-align: justify;
   }
-  footer div h3 {
-    margin-top: 30px;
+  footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
   }
   .icon {
-    text-align: justify;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
   }
+  /*footer div h3 {
+    margin-top: 30px;
+  }
+   */
 }
