--- a/style/root.css
+++ b/style/root.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -23,11 +24,14 @@ header {
   gap: 30px;
 }
 
+header > a {
+  font-size: 18px;
+  font-weight: bold;
+}
 header nav ul {
   list-style: none;
   display: flex;
 }
-
 .menu:not(:first-child):before {
   content: "|";
   padding-left: 16px;
@@ -45,7 +49,7 @@ footer {
   gap: 20px;
 }
 footer div h3 {
-  font-size: 1rem;
+  font-size: 18px;
   margin-top: 20px;
 }
 
@@ -55,6 +59,12 @@ footer div p {
 footer div:last-child {
   font-size: small;
 }
+/* .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+} */
 .icon a {
   font-size: 1rem;
 }
@@ -83,8 +93,4 @@ footer div:last-child {
     flex-direction: row;
     gap: 10px;
   }
-  /*footer div h3 {
-    margin-top: 30px;
-  }
-   */
 }
